style : add link href page information

--- a/Pages/appointments.html
+++ b/Pages/appointments.html
@@ -67,7 +67,7 @@
             <li><a href="/index.html">Porch</a></li>
             <li><a href="#" class="active">Appointments</a></li>
             <li><a href="#">Service</a></li>
-            <li><a href="#">Information</a></li>
+            <li><a href="/Pages/information.html">Information</a></li>
             <a class="disable-login">Login/Register</a>
         </ul>
         <div class="search" id="search-nav">
