fix : Desktop version done

--- a/Pages/information.html
+++ b/Pages/information.html
@@ -90,7 +90,7 @@
 
 
     <section class="container style1">
-        <div class="content-left">
+        <div class="content-left" data-aos="fade-right" >
             <div class="bg-list">
                 <h2>Frequently asked questions</h2>
                 <div class="list-wrapp">
@@ -143,8 +143,149 @@
         </div>
     </section>
 
+    <section class="container style1 style2">
+        <div class="content-left" >
+            <div class="bg-list">
+                <h2>Visi Misi</h2>
+                <div class="list-wrapp">
+                    <button id="list-btn" class="list-btn">
+                        VISI
+                        <div class="icon-btn">
+                            <i class="fa-solid fa-plus btn-icon plus-icon"></i>
+                            <i class="fa-solid fa-minus btn-icon minus-icon"></i>
+                        </div>
+                    </button>
+                    <div class="list-desc">
+                        <p>RS Medika Nusantara hadir untuk mengintegrasikan teknologi dengan kebutuhan nyata di dunia kesehatan. Diharapkan mampu memfasilitasi pasien mendapatkan pelayanan kesehatan terbaik tentu juga dalam meningkatkan efisiensi administratif rumah sakit. RS Medika Nusantara menjadi tonggak strategis dalam upaya meningkatkan efisiensi dan efektivitas pelayanan kesehatan, membuka akses kesehatan yang lebih baik bagi masyarakat. </p>
+                    </div>
+                </div>
+                <div class="list-wrapp">
+                    <button id="list-btn" class="list-btn">
+                       MISI
+                        <div class="icon-btn">
+                            <i class="fa-solid fa-plus btn-icon plus-icon"></i>
+                            <i class="fa-solid fa-minus btn-icon minus-icon"></i>
+                        </div>
+                    </button>
+                    <div class="list-desc">
+                        <p>RS Medika Nusantara dapat mengatasi kendala aksesibilitas informasi dan efisiensi administratif yang terdapat dalam lingkungan rumah sakit. Dengan fokus pada pelayanan yang lebih baik bagi pasien dan efisiensi administratif yang mampu membawa inovasi signifikan di sektor kesehatan.
+                        </p>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+        <div class="content-right">
+            <img src="/Assets/visi.png" alt="visi misi">
+        </div>
+    </section>
+
+    <section class="container style1">
+        <div class="content-left">
+            <div class="bg-list">
+                <h2>Info Kontak</h2>
+                <div class="list-wrapp">
+                    <button id="list-btn" class="list-btn">
+                        Telephone
+                        <div class="icon-btn">
+                            <i class="fa-solid fa-plus btn-icon plus-icon" id="plus-icon"></i>
+                            <i class="fa-solid fa-minus btn-icon minus-icon" id="minus-icon"></i>
+                        </div>
+                    </button>
+                    <div class="list-desc" id="list-desc">
+                        <div class="office">
+                            <label> Office :  (0281) 112233 </label>
+                            <label> Custumer Service :  (+62)821 9988 7765 </label>
+                            <label> WhatsApp :  (+62)895 1233 4567</label>
+                        </div>
+                    </div>
+                </div>
+                <div class="list-wrapp">
+                    <button id="list-btn" class="list-btn">
+                        Email
+                        <div class="icon-btn">
+                            <i class="fa-solid fa-plus btn-icon plus-icon"></i>
+                            <i class="fa-solid fa-minus btn-icon minus-icon"></i>
+                        </div>
+                    </button>
+                    <div class="list-desc">
+                        <div class="office">
+                            <label> Email : medikanusantara@gmail.com </label>
+                           
+                        </div>
+                    </div>
+                </div>
+               
+                </div>
+
+            </div>
+        </div>
+        <div class="content-right">
+            <img src="/Assets/contact.png" alt="contact">
+        </div>
+    </section>
+
+    <!-- Footer Structure -->
+    <footer>
+        <div class="footer-row">
+            <section class="footer-col logo-footer">
+                <div>
+                    <img src="/Assets/logo company.png" alt="Hospital Logo">
+                </div>
+                <h3>Medika Nusantara</h3>
+                <p>Kawasan Inti Pusat Pemerintahan Ibu Kota Negara, Kecamatan Sepaku, Penajam Paser Utara, Kalimantan Timur</p>
+            </section>
+
+            <section class="footer-col">
+                <h4>About Us</h4>
+                <ul>
+                    <li> <a href="#">History</a></li>
+                    <li><a href="#">Overview</a></li>
+                    <li><a href="#">Investor Relations</a></li>
+                    <li><a href="#">Education and Training</a></li>
+                    <li><a href="#">Our Management</a></li>
+                </ul>
+            </section>
+
+            <section class="footer-col">
+                <h4>Coporate</h4>
+                <ul>
+                    <li><a href="#">Buat Janji Temu</a></li>
+                    <li><a href="#">Cari Dokter</a></li>
+                    <li><a href="#">Cari Lokasi</a></li>
+                    <li><a href="#">Karir</a></li>
+                </ul>
+            </section>
+
+            <section class="footer-col respon-news">
+                <h4>Newsletter</h4>
+                <p>Subscribe to our newsletter for news, updates, helpful tips and exclusive offers.</p>
+                <form action="#">
+                    <input type="text" placeholder="Your email" required>
+                    <button id="subscribe" type="submit">SUBSCRIBE</button>
+                </form>
+                <div class="sosial-media">
+                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="#"><i class="fa-brands fa-tiktok"></i></a>
+                <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                <a href="#"><i class="fa-solid fa-envelope"></i></a>
+            </div>
+            </section>
+        </div>
+        <div class="copy-right">
+            <p>Copyright &copy; 2023 Medika Nusantara. All rights reserved.</p>
+            <div class="privacy">
+                <a href="#">Privacy Policy</a>
+                <a href="#">Help & Support</a>
+            </div>
+        </div>
+    </footer>
 
 
+
+    <script src="/src/script/menu.js"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>AOS.init();</script>
     <!-- Functuion information FAQ -->
     <script>
 
