--- a/Pages/information.html
+++ b/Pages/information.html
@@ -90,7 +90,7 @@
 
 
     <section class="container style1">
-        <div class="content-left" data-aos="fade-right" >
+        <div class="content-left" data-aos="fade-right"  data-aos-duration="1000" >
             <div class="bg-list">
                 <h2>Frequently asked questions</h2>
                 <div class="list-wrapp">
@@ -138,13 +138,13 @@
 
             </div>
         </div>
-        <div class="content-right">
+        <div class="content-right" data-aos="fade-left" data-aos-duration="1000">
             <img src="/Assets/nurse.png" alt="nurse">
         </div>
     </section>
 
     <section class="container style1 style2">
-        <div class="content-left" >
+        <div class="content-left" data-aos="fade-left" data-aos-duration="1000" >
             <div class="bg-list">
                 <h2>Visi Misi</h2>
                 <div class="list-wrapp">
@@ -175,13 +175,13 @@
 
             </div>
         </div>
-        <div class="content-right">
+        <div class="content-right" data-aos="fade-right"  data-aos-duration="1000">
             <img src="/Assets/visi.png" alt="visi misi">
         </div>
     </section>
 
     <section class="container style1">
-        <div class="content-left">
+        <div class="content-left" data-aos="fade-right"  data-aos-duration="1000">
             <div class="bg-list">
                 <h2>Info Kontak</h2>
                 <div class="list-wrapp">
@@ -220,7 +220,7 @@
 
             </div>
         </div>
-        <div class="content-right">
+        <div class="content-right" data-aos="fade-left" data-aos-duration="1000">
             <img src="/Assets/contact.png" alt="contact">
         </div>
     </section>
