--- a/Pages/appointments.html
+++ b/Pages/appointments.html
@@ -88,13 +88,13 @@
 <!-- End header Structure -->
 
     <section class="hero-specialist">
-        <h1>Specialties</h1>
+        <h1 >Specialties</h1>
     </section>
 
     <section class="our-specialist container">
-        <h4>Our Specialist</h4>
+        <h4 data-aos="zoom-in" data-aos-duration="1000">Our Specialist</h4>
         <div class="card-specialist-list">
-            <div class="card-specialist">
+            <div class="card-specialist"  data-aos="fade-up" data-aos-duration="1000">
                 <div class="icon-specialist">
                     <img src="/Assets/tooth.png" alt="icon tooth">
                 </div>
@@ -102,7 +102,7 @@
                     <a href="#TS" class="">Tooth</a>
                 </div>
             </div>
-            <div class="card-specialist">
+            <div class="card-specialist" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100">
                 <div class="icon-specialist">
                     <img src="/Assets/surgery-room.png" alt="icon tooth">
                 </div>
@@ -110,7 +110,7 @@
                     <a href="#TSS" class="">General Surgery</a>
                 </div>
             </div>
-            <div class="card-specialist">
+            <div class="card-specialist" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="400">
                 <div class="icon-specialist">
                     <img src="/Assets/heart.png" alt="icon tooth">
                 </div>
@@ -123,9 +123,12 @@
 
 
     <section class="doctor container" id="TS">
-        <h4>Tooth Specialist</h4>
+        <h4 data-aos="zoom-in" data-aos-duration="1000">Tooth Specialist</h4>
         <div class="card-specialist-doctor-list">
-            <div class="card-specialist-doctor">
+            <div class="card-specialist-doctor" data-aos="fade-right"
+            data-aos-anchor="#example-anchor"
+            data-aos-offset="1000"
+            data-aos-duration="1000">
                 <div class="image-doctor">
                     <img src="/Assets/dalton-ngangi-ZCztndOWdjs-unsplash.jpg" alt="image-doctor">
                 </div>
@@ -143,7 +146,10 @@
                     </div>
                 </div>
             </div>
-            <div class="card-specialist-doctor">
+            <div class="card-specialist-doctor" data-aos="fade-up"
+            data-aos-anchor="#example-anchor"
+            data-aos-offset="1000"
+            data-aos-duration="1000">
                 <div class="image-doctor">
                     <img src="/Assets/dalton-ngangi-ZCztndOWdjs-unsplash.jpg" alt="image-doctor">
                 </div>
@@ -161,7 +167,10 @@
                     </div>
                 </div>
             </div>
-            <div class="card-specialist-doctor">
+            <div class="card-specialist-doctor" data-aos="fade-left"
+            data-aos-anchor="#example-anchor"
+            data-aos-offset="1000"
+            data-aos-duration="1000">
                 <div class="image-doctor">
                     <img src="/Assets/dalton-ngangi-ZCztndOWdjs-unsplash.jpg" alt="image-doctor">
                 </div>
@@ -183,9 +192,12 @@
 
     </section>
     <section class="doctor container" id="TSS">
-        <h4>General Surgery Specialist</h4>
+        <h4 data-aos="zoom-in" data-aos-duration="1000">General Surgery Specialist</h4>
         <div class="card-specialist-doctor-list">
-            <div class="card-specialist-doctor">
+            <div class="card-specialist-doctor" data-aos="fade-right"
+            data-aos-anchor="#example-anchor"
+            data-aos-offset="1000"
+            data-aos-duration="1000">
                 <div class="image-doctor">
                     <img src="/Assets/dalton-ngangi-ZCztndOWdjs-unsplash.jpg" alt="image-doctor">
                 </div>
@@ -203,7 +215,10 @@
                     </div>
                 </div>
             </div>
-            <div class="card-specialist-doctor">
+            <div class="card-specialist-doctor"  data-aos="fade-up"
+            data-aos-anchor="#example-anchor"
+            data-aos-offset="1000"
+            data-aos-duration="1000">
                 <div class="image-doctor">
                     <img src="/Assets/dalton-ngangi-ZCztndOWdjs-unsplash.jpg" alt="image-doctor">
                 </div>
@@ -221,7 +236,10 @@
                     </div>
                 </div>
             </div>
-            <div class="card-specialist-doctor">
+            <div class="card-specialist-doctor" data-aos="fade-left"
+            data-aos-anchor="#example-anchor"
+            data-aos-offset="1000"
+            data-aos-duration="1000">
                 <div class="image-doctor">
                     <img src="/Assets/dalton-ngangi-ZCztndOWdjs-unsplash.jpg" alt="image-doctor">
                 </div>
@@ -242,10 +260,14 @@
         </div>
 
     </section>
+
     <section class="doctor container" id="IMS">
-        <h4>Internal Medicine Specialist</h4>
+        <h4 data-aos="zoom-in" data-aos-duration="1000">Internal Medicine Specialist</h4>
         <div class="card-specialist-doctor-list">
-            <div class="card-specialist-doctor">
+            <div class="card-specialist-doctor" data-aos="fade-right"
+            data-aos-anchor="#example-anchor"
+            data-aos-offset="1000"
+            data-aos-duration="1000">
                 <div class="image-doctor">
                     <img src="/Assets/dalton-ngangi-ZCztndOWdjs-unsplash.jpg" alt="image-doctor">
                 </div>
@@ -263,7 +285,10 @@
                     </div>
                 </div>
             </div>
-            <div class="card-specialist-doctor">
+            <div class="card-specialist-doctor" data-aos="fade-up"
+            data-aos-anchor="#example-anchor"
+            data-aos-offset="1000"
+            data-aos-duration="1000">
                 <div class="image-doctor">
                     <img src="/Assets/dalton-ngangi-ZCztndOWdjs-unsplash.jpg" alt="image-doctor">
                 </div>
@@ -281,7 +306,10 @@
                     </div>
                 </div>
             </div>
-            <div class="card-specialist-doctor">
+            <div class="card-specialist-doctor" data-aos="fade-left"
+            data-aos-anchor="#example-anchor"
+            data-aos-offset="1000"
+            data-aos-duration="1000">
                 <div class="image-doctor">
                     <img src="/Assets/dalton-ngangi-ZCztndOWdjs-unsplash.jpg" alt="image-doctor">
                 </div>
