--- a/Pages/appointments.html
+++ b/Pages/appointments.html
@@ -88,7 +88,7 @@
 <!-- End header Structure -->
 
     <section class="hero-specialist">
-        <h1 >Specialties</h1>
+        <h1 data-aos="zoom-in" data-aos-duration="1000">Specialties</h1>
     </section>
 
     <section class="our-specialist container">
