chore: Update codebase on section hero specialist

--- a/Pages/appointments.html
+++ b/Pages/appointments.html
@@ -88,6 +88,7 @@
 <!-- End header Structure -->
 
     <section class="hero-specialist">
+        <img src="/Assets/national-cancer-institute-c6rgP7K5rXc-unsplash.jpg" alt="">
         <h1 data-aos="zoom-in" data-aos-duration="1000">Specialties</h1>
     </section>
 
