chore: change structure on class make appoinment

--- a/Pages/appointments.html
+++ b/Pages/appointments.html
@@ -142,7 +142,7 @@
                         <label>4.5 | 5</label>
                     </div>
                     <div class="make-appoitment">
-                        <span>In</span>
+                        <a href=""><i class="fa-brands fa-linkedin"></i></a>
                         <a href="#">Make Appoitment</a>
                     </div>
                 </div>
@@ -163,7 +163,7 @@
                         <label>4.5 | 5</label>
                     </div>
                     <div class="make-appoitment">
-                        <span>In</span>
+                        <a href=""><i class="fa-brands fa-linkedin"></i></a>
                         <a href="#">Make Appoitment</a>
                     </div>
                 </div>
@@ -184,7 +184,7 @@
                         <label>4.5 | 5</label>
                     </div>
                     <div class="make-appoitment">
-                        <span>In</span>
+                        <a href=""><i class="fa-brands fa-linkedin"></i></a>
                         <a href="#">Make Appoitment</a>
                     </div>
                 </div>
@@ -211,7 +211,7 @@
                         <label>4.5 | 5</label>
                     </div>
                     <div class="make-appoitment">
-                        <span>In</span>
+                        <a href=""><i class="fa-brands fa-linkedin"></i></a>
                         <a href="#">Make Appoitment</a>
                     </div>
                 </div>
@@ -232,7 +232,7 @@
                         <label>4.5 | 5</label>
                     </div>
                     <div class="make-appoitment">
-                        <span>In</span>
+                        <a href=""><i class="fa-brands fa-linkedin"></i></a>
                         <a href="#">Make Appoitment</a>
                     </div>
                 </div>
@@ -253,7 +253,7 @@
                         <label>4.5 | 5</label>
                     </div>
                     <div class="make-appoitment">
-                        <span>In</span>
+                        <a href=""><i class="fa-brands fa-linkedin"></i></a>
                         <a href="#">Make Appoitment</a>
                     </div>
                 </div>
@@ -281,7 +281,7 @@
                         <label>4.5 | 5</label>
                     </div>
                     <div class="make-appoitment">
-                        <span>In</span>
+                        <a href=""><i class="fa-brands fa-linkedin"></i></a>
                         <a href="#">Make Appoitment</a>
                     </div>
                 </div>
@@ -302,7 +302,7 @@
                         <label>4.5 | 5</label>
                     </div>
                     <div class="make-appoitment">
-                        <span>In</span>
+                        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                         <a href="#">Make Appoitment</a>
                     </div>
                 </div>
@@ -323,7 +323,7 @@
                         <label>4.5 | 5</label>
                     </div>
                     <div class="make-appoitment">
-                        <span>In</span>
+                        <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                         <a href="#">Make Appoitment</a>
                     </div>
                 </div>
