--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="/src/styles/navbar.css"> <!--Navbar-->
     <link rel="stylesheet" href="/src/styles/footer.css">
     <link rel="stylesheet" href="/src/styles/fotnav-res.css"> <!--Responsive navbar and Footer-->
-    <link rel="stylesheet" href="style.css"> <!-- Prorch css-->
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="responsive.css">
 
     <!-- add font from google font -->
@@ -25,7 +25,7 @@
         rel="stylesheet">
     <link rel="icon" href="/Assets/logo company.png" />
     <!-- Animation on scroll -->
-    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <!-- <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" /> -->
 </head>
 
 <body>
@@ -138,13 +138,12 @@
     </section>
     <!-- end section card -->
 
-
-    <!-- section about -->
-    <section class="about container">
-        <div class="container-about" data-aos="fade-right" data-aos-duration="1000">
-            <img src="/Assets/hospital fasilities.jpg" alt="Hospital Facilities">
+     <!-- section about -->
+     <section class="about container">
+        <div class="content-left-about" data-aos="fade-right" data-aos-duration="1000">
+            <img src="/Assets/fasilitas.png" alt="Hospital Facilities">
         </div>
-        <div class="container-about" data-aos="fade-left" data-aos-duration="1000">
+        <div class="content-right-about" data-aos="fade-left" data-aos-duration="1000">
             <article>
                 <h4>About</h4>
                 <h2>The Complete Medical Facilities for you</h2>
@@ -247,12 +246,10 @@
         </div>
 
     </section>
-
     <!-- Footer Structure -->
     <footer>
         <div class="footer-row">
-            <section class="footer-col logo-footer" data-aos="fade-right" data-aos-offset="300"
-                data-aos-easing="ease-in-sine" data-aos-duration="500">
+            <section class="footer-col logo-footer">
                 <div>
                     <img src="/Assets/logo company.png" alt="Hospital Logo">
                 </div>
@@ -261,8 +258,7 @@
                     Timur</p>
             </section>
 
-            <section class="footer-col" data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine"
-                data-aos-duration="500">
+            <section class="footer-col">
                 <h4>About Us</h4>
                 <ul>
                     <li> <a href="#">History</a></li>
@@ -273,8 +269,7 @@
                 </ul>
             </section>
 
-            <section class="footer-col" data-aos="fade-left" data-aos-offset="300" data-aos-easing="ease-in-sine"
-                data-aos-duration="500">
+            <section class="footer-col">
                 <h4>Coporate</h4>
                 <ul>
                     <li><a href="#">Buat Janji Temu</a></li>
@@ -284,8 +279,7 @@
                 </ul>
             </section>
 
-            <section class="footer-col respon-news" data-aos="fade-left" data-aos-offset="300"
-                data-aos-easing="ease-in-sine" data-aos-duration="500">
+            <section class="footer-col respon-news">
                 <h4>Newsletter</h4>
                 <p>Subscribe to our newsletter for news, updates, helpful tips and exclusive offers.</p>
                 <form action="#">
@@ -310,7 +304,7 @@
     </footer>
 
     <script src="/src/script/menu.js"></script>
-    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <!-- <script src="https://unpkg.com/aos@next/dist/aos.js"></script> -->
     <script>AOS.init();</script>
 
 </body>
