--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
     </footer>
 
     <script src="/src/script/menu.js"></script>
-    <!-- <script src="https://unpkg.com/aos@next/dist/aos.js"></script> -->
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
     <script>AOS.init();</script>
 
 </body>
