fix : width AOS

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         rel="stylesheet">
     <link rel="icon" href="/Assets/logo company.png" />
     <!-- Animation on scroll -->
-    <!-- <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" /> -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 
 <body>
